src/test/deca/context/invalid/cond_if_but_class.deca
// Test la règle 3.29

{
    A a = new A();
    if (a){

    };
}

// Resultat:
// TODOTEST  SHOULD CRASH BUT DOESNT
